--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
           <h3>Fundamental</h3>
           <ul>
             <li><a href="lecture-1.html">Технологии интернета и Web</a></li>
-            <li><a href="lecture-2.html">Архитектура ЭВМ и ОС</li>
-            <li><a href="lecture-3.html">Технологии  программирования</li>
-            <li><a href="lecture-4.html">Сетевые технологии</li>
-            <li><a href="lecture-5.html">Высокопроизводительные вычисления</li>
+            <li><a href="lecture-2.html">Архитектура ЭВМ и ОС</a></li>
+            <li><a href="lecture-3.html">Технологии  программирования</a></li>
+            <li><a href="lecture-4.html">Сетевые технологии</a></li>
+            <li><a href="lecture-5.html">Высокопроизводительные вычисления</a></li>
             <li>&hellip;</li>
           </ul>
         </section>
